2006-08-02  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerVisibility.cmake: use CMake
	module
	
	* admin/CMakeModules/FindOpenALBackends.cmake: added
	
	* CMakeLists.txt: factor out backends detection macro

2006-08-01  Sven Panne  <sven.panne@aedion.de>

	* src/al_filter.c: Avoid a (wrong) warning when using Visual C.

2006-07-31  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/al_siteconfig.h: Cleaned up snprintf detection
	logic.

	* src/al_siteconfig.h, src/alc/alc_context.c: To avoid portability
	issues, use a home-grown case-insensitve string comparison function.

	* src/al_siteconfig.h: Cleaned up #ifdefs for sized integer types.

	* src/al_siteconfig.h: Nuked ancient Darwin stuff.

	* config-osx.h: Removed.

	* src/backends/alc_backend_wave.c: If needed, open WAVE file in binary
	mode.

2006-07-31  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: add -W flags only for GCC compatible compilers, check
	for more headers, don't build static lib by default, don't work-around
	nasm visibility detection anymore (requires cmake >=2.4), add checks
	for snprintf and __int8
	
	* src/al_siteconfig.h: some Windows fixes
	
	* src/backends/alc_backend_wave.c, src/alc/alc_context.c: check for
	non-standard headers
	
	* admin/CMakeModules/FindSleepFunction.cmake: always check for unistd.h
	on non-Windows, fix CHECK_INCLUDE_FILE_DEFINE macro
	
	* test/test*: refactor headers into testlib.h, fix windows sleep
	
	* test/testlib.c: fix Sleep tenfold error
	
	* src/extensions/al_ext_vorbis.c: cast data to (ALvoid*) to eliminate
	warning

2006-07-24  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am, src/al_dlopen.c: Compilation fixes for MinGW.

2006-07-20  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_alsa.c: Chris: fixing a problem with the ALSA
	backend using the snd_pcm_format_size function instead of the
	psnd_pcm_format_size function pointer when dynamically loading the lib
